# LeMontage

./: .dockerignore  .gitignore  .hadolint.yaml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  HANDOFF.md  README.md  SECURITY.md  SUPPORT.md  TODO.md  get.sh  install.ps1  install.sh  pipeline_podcast.yaml  pipeline_test.yaml  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: build.yml  ci.yml  codeql.yml  docs.yml  quality.yml  release.yml  test.yml  trivy.yml
docs/: ARCHITECTURE.md  INSTALL.md  RELEASE.md  ROADMAP.md  SPEC.md  lemontage.1  reelflow.1
docs/design/: channel-operators.md  image-input.md
docs/site/: style.css
examples/: pipeline_agent.yaml  pipeline_carousel.yaml  pipeline_clips.yaml  pipeline_merge.yaml  pipeline_music.yaml  pipeline_overlay.yaml  pipeline_pan_scroll.yaml  pipeline_reverse.yaml  pipeline_slowmo.yaml  pipeline_subtitles.yaml  pipeline_top3.yaml  pipeline_transition.yaml  pipeline_zoom_punch.yaml  podcast-to-clips.yaml  slow-motion-replay.yaml  ufc-highlights.yaml  viral-plus-montage.yaml
infrastructure/local/: compose.yaml
infrastructure/script/: get.sh  install.ps1  install.sh
src/lemontage/: __init__.py  __main__.py  analyze.py  cli.py  completion.py  spec.py  validator.py
src/lemontage/engine/: __init__.py  assformat.py  context.py  dag.py  executor.py  ffmpeg.py  fonts.py  safepath.py  template.py  timecode.py
src/lemontage/engine/blocks/: __init__.py  base.py  captions.py  concat.py  detect_clips.py  export.py  music.py  overlay.py  reverse.py  speed.py  still.py  stills.py  stt.py
src/lemontage/engine/providers/: base.py  whisper.py
src/reelflow/: __init__.py  __main__.py  cli.py  spec.py  validator.py
src/reelflow/engine/: __init__.py  context.py  executor.py  ffmpeg.py  fonts.py  template.py
src/reelflow/engine/blocks/: __init__.py  base.py  captions.py  cut.py  stt.py  tts.py
src/reelflow/engine/providers/: __init__.py  base.py  kokoro.py  models.py  whisper.py
tests/: test_analyze.py  test_block_music.py  test_block_overlay.py  test_block_reverse.py  test_block_speed.py  test_blocks.py  test_cli.py  test_completion.py  test_dag.py  test_executor.py  test_ffmpeg.py  test_fonts.py  test_images.py  test_security.py  test_template.py  test_timecode.py  test_validator.py
