[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "reelflow"
version = "0.1.0"
description = "A pipeline-first framework for content creators: clips, reels, TikToks, shorts and podcasts."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "florian FILLOUX" }]
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[project.scripts]
reelflow = "reelflow.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
