[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lemontage"
version = "0.1.2"
description = "A pipeline-first framework for content creators: clips, reels, TikToks, shorts and podcasts."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "florian FILLOUX" }]
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Everything the execution engine needs to actually produce media. Kept optional
# so `lemontage validate` stays dependency-light; `lemontage run` requires these.
engine = [
    "imageio-ffmpeg>=0.4",
    "faster-whisper>=1.0",
]
dev = [
    "pre-commit>=4.0",
    "pytest>=8.0",
    "ruff>=0.5",
]

[project.scripts]
lemontage = "lemontage.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
